# hateserv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hateserv.cabal
app/: Main.hs
