cabal-version:      2.4
name:               hateserv
version:            0.1.0.0

synopsis:           Insult generator API

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Gethin Davies
maintainer:         grd.davies@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hateserv
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        servant-server ^>=0.20,
        servant-client,
        base-compat ^>=0.13.1,
        mtl ^>=2.2.2,
        aeson ^>=2.2.1.0,
        http-media ^>=0.8.1.1,
        http-client,
        text,
        wai ^>=3.2.3,
        wai-logger ^>=2.4.0,
        warp ^>=3.3.30,
        sqlite-simple ^>=0.4.18.2,
    hs-source-dirs:   app
    default-language: Haskell2010
